--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -23,6 +23,15 @@
     height: 50px;
     width: 100px;
     border-radius: 15px;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      transform: scale(0.95);
+      box-shadow: 0 0 1px var(--white-color), 0 0 3px var(--white-color),
+        0 0 5px var(--white-color), /* Blue glow */ 0 0 9px var(--teal-color),
+        0 0 12px var(--teal-color), 0 0 15px var(--teal-color),
+        0 0 19px var(--teal-color), 0 0 25px var(--teal-color);
+    }
 
     @media screen and (min-width: 1200px) {
       height: 100px;
@@ -46,6 +55,7 @@
     flex-direction: column;
 
     a {
+      color: var(--teal-color);
       text-decoration: none;
       flex-direction: column;
 
@@ -53,6 +63,15 @@
       font-weight: 500;
 
       transition: all 0.3s ease-in-out;
+
+      &:hover {
+        color: var(--white-color);
+        text-shadow: 0 0 7px var(--white-color), 0 0 10px var(--white-color),
+          0 0 21px var(--white-color),
+          /* Blue glow */ 0 0 42px var(--teal-color), 0 0 82px var(--teal-color),
+          0 0 92px var(--teal-color), 0 0 102px var(--teal-color),
+          0 0 151px var(--teal-color);
+      }
     }
 
     div {
