--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -61,6 +61,7 @@
       border-radius: 50%;
 
       margin-bottom: 5px;
+      transition: all 0.2s ease-in-out;
     }
 
     a {
@@ -85,7 +86,8 @@
 
     &:hover {
       div {
-        background-color: var(--teal-color);
+        background-color: var(--white-color);
+        box-shadow: 0 0 10px var(--teal-color);
       }
     }
   }
