updated header component

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -58,15 +58,29 @@
   align-items: flex-end;
   flex-direction: column;
 
+  .badge-cmp p {
+    color: var(--teal-color);
+  }
+
+  .badge-cmp h1 {
+    font-family: var(--font-accent);
+    font-weight: 400;
+    color: var(--white-color);
+    text-shadow: 0 0 2px var(--white-color), 0 0 3px var(--white-color),
+      0 0 5px var(--white-color), 0 0 12px var(--teal-color),
+      0 0 17px var(--teal-color), 0 0 21px var(--teal-color),
+      0 0 27px var(--teal-color), 0 0 37px var(--teal-color);
+  }
+
   .badge-cmp,
   .tag-cmp {
     padding: 1rem 2rem;
-    background: var(--white-color);
+    background: rgba(14, 6, 12, 0.7);
     border-radius: 15px;
     flex-direction: row;
     width: auto;
 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.9);
   }
 
   .tag-cmp {
@@ -75,20 +89,21 @@
 
     p {
       width: 100%;
+      color: var(--teal-color);
       text-transform: uppercase;
       text-align: right;
     }
   }
 
   span {
-    font-size: 2.5rem;
+    font-size: 2.2rem;
 
     @media screen and (min-width: 2000px) {
       font-size: 5rem;
     }
   }
 
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 900px) {
     justify-content: flex-start;
     align-items: flex-start;
   }
@@ -108,8 +123,8 @@
     height: 100px;
     border-radius: 50%;
 
-    background: var(--white-color);
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    background: rgba(14, 6, 12, 0.7);
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.9);
 
     img {
       width: 60%;
@@ -120,8 +135,8 @@
   // circles with different height & width
 
   div:nth-child(1) {
-    width: 100px;
-    height: 100px;
+    width: 105px;
+    height: 105px;
   }
 
   div:nth-child(2) {
@@ -131,8 +146,8 @@
   }
 
   div:nth-child(3) {
-    width: 70px;
-    height: 70px;
+    width: 75px;
+    height: 75px;
   }
 
   @media screen and (min-width: 2000px) {
@@ -175,6 +190,7 @@
 
   img {
     width: 100%;
+    border-radius: 50%;
     object-fit: contain;
     z-index: 1;
   }
@@ -186,7 +202,8 @@
     bottom: 0;
     z-index: 0;
     width: 100%;
-    height: 90%;
+    height: 100%;
+    box-shadow: 0px 0px 24px rgba(255, 255, 255, 0.1);
   }
 
   @media screen and (max-width: 1200px) {
