updated header component, figure out height

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -167,6 +167,23 @@
     }
   }
 
+  @media screen and (max-width: 800px) {
+    div:nth-child(2) {
+      width: 125px;
+      height: 125px;
+    }
+
+    div:nth-child(3) {
+      width: 70px;
+      height: 70px;
+    }
+
+    div:nth-child(1) {
+      width: 100px;
+      height: 100px;
+    }
+  }
+
   @media screen and (max-width: 1200px) {
     width: 100%;
     flex-direction: row;
