--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   background-position: center;
   background-repeat: repeat;
 
-  .app_wrapper {
+  .app__wrapper {
     padding: 0;
 
     .copyright {
@@ -14,15 +14,15 @@
   }
 }
 
-.app_header {
+.app__header {
   flex: 1;
   width: 100%;
   height: 100%;
   flex-direction: row;
 
-  padding: 6rem 2rem 0rem;
+  padding: 9rem 2rem 0rem;
 
-  @media (min-width: 2000px) {
+  @media screen and (min-width: 2000px) {
     padding-top: 8rem;
   }
 
@@ -103,7 +103,14 @@
     }
   }
 
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 1200px) {
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
   }
@@ -177,22 +184,22 @@
       margin: 1rem;
     }
   }
-}
 
-@media screen and (max-width: 800px) {
-  div:nth-child(2) {
-    width: 125px;
-    height: 125px;
-  }
+  @media screen and (max-width: 800px) {
+    div:nth-child(2) {
+      width: 125px;
+      height: 125px;
+    }
 
-  div:nth-child(3) {
-    width: 70px;
-    height: 70px;
-  }
+    div:nth-child(3) {
+      width: 70px;
+      height: 70px;
+    }
 
-  div:nth-child(1) {
-    width: 100px;
-    height: 100px;
+    div:nth-child(1) {
+      width: 100px;
+      height: 100px;
+    }
   }
 }
 
@@ -224,6 +231,6 @@
   }
 
   @media screen and (max-width: 1200px) {
-    margin: 2rem 0;
+    margin: 1rem 0;
   }
 }
