rerouted home, added high order components

--- a/src/App.scss
+++ b/src/App.scss
@@ -126,8 +126,8 @@
     }
 
     &:hover {
-      background-color: var(--blue-color);
-      border-color: var(--blue-color);
+      background-color: var(--teal-color);
+      border-color: var(--teal-color);
 
       svg {
         color: var(--black-color);
