added portfolio styling and motion wrap

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   --pear-color: #cddc41;
   --white-color: #ffffff;
   --secondary-color: #f7f5f3;
-  --gray-color: #6c757d;
+  --gray-color: #939aa1;
 }
 
 * {
