--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,14 @@
   background-color: var(--black-color);
 }
 
+.app__brickbg {
+  position: relative;
+  background: url("./assets/brick.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+}
+
 .app__primarybg {
   background-color: var(--primary-color);
 }
