--- a/src/App.scss
+++ b/src/App.scss
@@ -75,8 +75,11 @@
       0 0 5px var(--white-color), 0 0 12px var(--teal-color),
       0 0 17px var(--teal-color), 0 0 21px var(--teal-color),
       0 0 27px var(--teal-color), 0 0 37px var(--teal-color);
-  }
 
+    @media screen and (min-width: 2000px) {
+      font-size: 4rem;
+    }
+  }
   @media screen and (min-width: 2000px) {
     font-size: 4rem;
   }
@@ -114,7 +117,8 @@
 
 .app__social {
   display: flex;
-  justify-content: flex-end;
+  margin-top: 6rem;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 
@@ -124,7 +128,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: var(--black-color);
+    background-color: rgba(14, 6, 12, 0.8);
     margin: 0.25rem 0;
     border: 1px solid var(--gray-color);
 
