--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -2,6 +2,11 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
+  padding: 2rem 0rem 0rem;
+
+  @media screen and (min-width: 1200px) {
+    padding: 5rem 0rem 0rem;
+  }
 }
 
 .app__profiles {
