--- a/src/pages/Portfolio/Portfolio.scss
+++ b/src/pages/Portfolio/Portfolio.scss
@@ -2,6 +2,11 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
+  padding: 2rem 0rem 0rem;
+
+  @media screen and (min-width: 1200px) {
+    padding: 5rem 0rem 0rem;
+  }
 }
 
 .app__portfolio-filter {
@@ -55,7 +60,7 @@
     width: 270px;
     flex-direction: column;
 
-    margin: 2rem;
+    margin: 2rem 1rem;
     padding: 1rem;
     border-radius: 0.5rem;
     background-color: var(--gray-color);
