updated contact a bit

--- a/src/pages/Header/Header.scss
+++ b/src/pages/Header/Header.scss
@@ -124,7 +124,7 @@
   justify-content: space-evenly;
   align-items: flex-start;
   height: 100%;
-  margin-left: 1rem;
+  margin-left: 2rem;
 
   div {
     width: 100px;
@@ -175,7 +175,7 @@
     }
   }
 
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 800px) {
     width: 100%;
     flex-direction: row;
     flex-wrap: wrap;
@@ -206,11 +206,11 @@
 
 .app__header-img {
   flex: 1;
-  height: 100%;
+  height: auto;
 
   display: flex;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: center;
   position: relative;
 
   img {
