added links to socials, style to contact form, needs validation

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,7 +55,7 @@
 
   p {
     text-transform: uppercase;
-    color: var(--black-color);
+    color: var(--teal-color);
   }
 }
 
@@ -103,7 +103,7 @@
 .bold-text {
   font-size: 1rem;
   font-weight: 800;
-  color: var(--gray-color);
+  color: var(--secondary-color);
   text-align: left;
 
   @media screen and (min-width: 2000px) {
