--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -2,9 +2,14 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
+  padding: 3rem 0rem 0rem;
 
   @media screen and (max-width: 768px) {
     flex-direction: column;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 5rem 0rem 0rem;
   }
 }
 
@@ -27,14 +32,14 @@
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #fef4f5;
+    background-color: rgba(14, 6, 12, 0.9);
 
     transition: all 0.3s ease-in-out;
 
     img {
       width: 40px;
       height: 40px;
-      margin: 0 0.7rem;
+      margin: 0 0.5rem;
     }
 
     p {
@@ -45,7 +50,7 @@
       font-weight: 500;
     }
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
+      box-shadow: 0 0 25px var(--white-color);
     }
 
     @media screen and (max-width: 450px) {
@@ -59,11 +64,11 @@
 }
 
 .app__contact-cards .app__contact-card:last-child {
-  background-color: #f2f7fb;
+  background-color: rgba(14, 6, 12, 0.9);
 }
 
 .app__contact-cards .app__contact-card:last-child:hover {
-  box-shadow: 0 0 25px #f2f7fb;
+  box-shadow: 0 0 25px var(--white-color);
 }
 
 .app__contact-form {
@@ -77,7 +82,7 @@
     margin: 0.75rem 0;
     border-radius: 10px;
     cursor: pointer;
-    background-color: var(--primary-color);
+    background-color: rgba(14, 6, 12, 0.9);
 
     transition: all 0.3s ease-in-out;
 
@@ -87,7 +92,7 @@
       padding: 0.95rem;
       border: none;
       border-radius: 7px;
-      background-color: var(--primary-color);
+      background-color: rgba(14, 6, 12, 0.9);
 
       font-family: var(--font-base);
       color: var(--secondary-color);
@@ -99,7 +104,7 @@
     }
 
     &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
+      box-shadow: 0 0 25px var(--white-color);
     }
   }
 
@@ -107,10 +112,10 @@
     padding: 1rem 2rem;
     border-radius: 10px;
     border: none;
-    background-color: var(--secondary-color);
+    background-color: var(--teal-color);
 
     font-weight: 500;
-    color: var(--white-color);
+    color: var(--black-color);
     outline: none;
     margin: 2rem 0 0 0;
     font-family: var(--font-base);
@@ -119,7 +124,12 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #2430af;
+      color: var(--white-color);
+      box-shadow: 0 0 25px var(--white-color);
+      text-shadow: 0 0 5px var(--white-color), 0 0 9px var(--white-color),
+        0 0 15px var(--white-color), 0 0 23px var(--teal-color),
+        0 0 38px var(--teal-color), 0 0 52px var(--teal-color),
+        0 0 79px var(--teal-color), 0 0 100px var(--teal-color);
     }
   }
 
