--- a/src/pages/Header/Header.scss
+++ b/src/pages/Header/Header.scss
@@ -44,7 +44,7 @@
   align-items: flex-start;
   height: 100%;
 
-  margin: 0 2rem;
+  margin: 3rem 0 2rem 2rem;
 
   @media screen and (max-width: 1200px) {
     width: 100%;
