--- a/src/pages/Header/Header.scss
+++ b/src/pages/Header/Header.scss
@@ -158,6 +158,17 @@
     height: 75px;
   }
 
+  div:nth-child(4) {
+    margin: 1.75rem;
+    width: 140px;
+    height: 140px;
+  }
+
+  div:nth-child(5) {
+    width: 75px;
+    height: 75px;
+  }
+
   @media screen and (min-width: 2000px) {
     div:nth-child(2) {
       width: 400px;
@@ -172,6 +183,15 @@
     div:nth-child(1) {
       width: 200px;
       height: 200px;
+    }
+    div:nth-child(4) {
+      width: 390px;
+      height: 390px;
+    }
+
+    div:nth-child(5) {
+      width: 150px;
+      height: 150px;
     }
   }
 
