--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,18 +1,49 @@
 .slider__container {
+  position: relative;
   display: flex;
-  overflow-x: hidden;
-  width: 100%;
-  padding: 1rem 0;
+  align-items: center;
   margin-top: 2rem;
 }
 
 .slider__card {
-  flex-shrink: 0;
+  width: 50vw;
+  height: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.slider__card::-webkit-scrollbar {
+  display: none;
+}
+
+.slider__image {
+  display: inline-block;
+  padding: 1rem;
   width: 100px;
   height: 100px;
-  border-radius: 10px;
-  margin-left: 10px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  transition: 300ms ease-in-out;
+
+  &:hover {
+    transform: scale(1.25);
+  }
+}
+
+.slider__chevron {
+  margin: 1rem;
+  color: var(--teal-color);
+  opacity: 0.9;
+  cursor: pointer;
+  &:hover {
+    opacity: 1;
+    color: var(--white-color);
+    filter: drop-shadow(0 0 9px var(--white-color));
+    filter: drop-shadow(0 0 16px var(--white-color));
+    filter: drop-shadow(0 0 30px var(--teal-color));
+    filter: drop-shadow(0 0 50px var(--teal-color));
+  }
 }
