--- a/src/pages/Header/Header.scss
+++ b/src/pages/Header/Header.scss
@@ -199,8 +199,9 @@
     }
   }
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1200px) {
     width: 100%;
+    padding-top: 1rem;
     flex-direction: row;
     flex-wrap: wrap;
     margin-left: 0;
@@ -256,6 +257,10 @@
   }
 
   @media screen and (max-width: 1200px) {
+    width: 80%;
     margin: 1rem 0;
+  }
+  @media screen and (max-width: 500px) {
+    width: 100%;
   }
 }
